--- a/src/mainmenu.ui
+++ b/src/mainmenu.ui
@@ -132,7 +132,7 @@
             </widget>
            </item>
            <item row="2" column="2">
-            <widget class="QPushButton" name="pushButton_3">
+            <widget class="QPushButton" name="pushButton_gotoSettings">
              <property name="text">
               <string>Settings</string>
              </property>
