--- a/src/mainmenu.ui
+++ b/src/mainmenu.ui
@@ -113,7 +113,7 @@
             </spacer>
            </item>
            <item row="1" column="1">
-            <widget class="QPushButton" name="pushButton_2">
+            <widget class="QPushButton" name="pushButton_gotoGear">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>1</horstretch>
