--- a/src/pages/gearCenter.ui
+++ b/src/pages/gearCenter.ui
@@ -222,7 +222,7 @@
       <widget class="QLineEdit" name="lineEdit">
        <property name="geometry">
         <rect>
-         <x>40</x>
+         <x>30</x>
          <y>50</y>
          <width>261</width>
          <height>20</height>
@@ -235,8 +235,8 @@
       <widget class="QPushButton" name="pushButton_5">
        <property name="geometry">
         <rect>
-         <x>490</x>
-         <y>500</y>
+         <x>770</x>
+         <y>550</y>
          <width>81</width>
          <height>23</height>
         </rect>
@@ -248,8 +248,8 @@
       <widget class="QComboBox" name="comboBox">
        <property name="geometry">
         <rect>
-         <x>70</x>
-         <y>270</y>
+         <x>860</x>
+         <y>410</y>
          <width>111</width>
          <height>21</height>
         </rect>
@@ -270,11 +270,11 @@
         </property>
        </item>
       </widget>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
-         <x>60</x>
-         <y>140</y>
+         <x>760</x>
+         <y>460</y>
          <width>131</width>
          <height>68</height>
         </rect>
@@ -299,7 +299,7 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>800</x>
@@ -360,6 +360,22 @@
          </widget>
         </item>
        </layout>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_2">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>90</y>
+         <width>261</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="placeholderText">
+        <string>item name</string>
+       </property>
       </widget>
      </widget>
     </widget>
