Set up SQL for Gear
I finshed the gear_list and gear_notes tables.
I also finshed and tested the DbConnect function to query the DB and pull the vector of notes.

I left a lot of room from expation in this query to allow for txt / xml report generation in the future.

--- a/src/pages/gearCenter.ui
+++ b/src/pages/gearCenter.ui
@@ -298,6 +298,11 @@
                  </item>
                  <item>
                   <property name="text">
+                   <string>Missing Parts</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
                    <string>Needs Maintenance</string>
                   </property>
                  </item>
@@ -391,7 +396,21 @@
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_3">
               <item>
-               <widget class="QLineEdit" name="lineEdit">
+               <widget class="QLabel" name="label_13">
+                <property name="text">
+                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Scan Code&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="Line" name="line_5">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="lineEdit_scanCode">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                   <horstretch>0</horstretch>
