--- a/src/reportsView.ui
+++ b/src/reportsView.ui
@@ -16,6 +16,15 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="font">
+   <font>
+    <family>Segoe UI</family>
+    <pointsize>10</pointsize>
+    <weight>50</weight>
+    <italic>false</italic>
+    <bold>false</bold>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -23,7 +32,7 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">font: 8pt &quot;Segoe UI&quot;;</string>
+   <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
@@ -33,7 +42,7 @@
        <property name="font">
         <font>
          <family>Segoe UI</family>
-         <pointsize>10</pointsize>
+         <pointsize>18</pointsize>
          <weight>50</weight>
          <italic>false</italic>
          <bold>false</bold>
@@ -43,13 +52,13 @@
         <enum>Qt::LeftToRight</enum>
        </property>
        <property name="styleSheet">
-        <string notr="true">font: 10pt &quot;Segoe UI&quot;;</string>
+        <string notr="true">font: 18pt &quot;Segoe UI&quot;</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:11pt; font-weight:600; color:#2a82da;&quot;&gt;Inventory Management Panel&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:600; color:#2a82da;&quot;&gt;Inventory Management Panel&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="textFormat">
         <enum>Qt::RichText</enum>
@@ -75,11 +84,14 @@
          <property name="font">
           <font>
            <family>Segoe UI</family>
-           <pointsize>8</pointsize>
+           <pointsize>10</pointsize>
            <weight>50</weight>
            <italic>false</italic>
            <bold>false</bold>
           </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
          </property>
          <property name="frameShape">
           <enum>QFrame::Box</enum>
@@ -109,6 +121,15 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="font">
+          <font>
+           <family>Segoe UI</family>
+           <pointsize>10</pointsize>
+           <weight>50</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
          <property name="frameShape">
           <enum>QFrame::Box</enum>
          </property>
@@ -123,8 +144,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>232</width>
-            <height>474</height>
+            <width>245</width>
+            <height>435</height>
            </rect>
           </property>
           <attribute name="label">
@@ -149,6 +170,18 @@
              </item>
              <item>
               <widget class="QRadioButton" name="radioButton_FullR">
+               <property name="font">
+                <font>
+                 <family>Segoe UI</family>
+                 <pointsize>10</pointsize>
+                 <weight>50</weight>
+                 <italic>false</italic>
+                 <bold>false</bold>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
+               </property>
                <property name="text">
                 <string>Full Report</string>
                </property>
@@ -156,6 +189,9 @@
              </item>
              <item>
               <widget class="QRadioButton" name="radioButton_LowR">
+               <property name="styleSheet">
+                <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
+               </property>
                <property name="text">
                 <string>Low Items (35% to target)</string>
                </property>
@@ -163,6 +199,9 @@
              </item>
              <item>
               <widget class="QRadioButton" name="radioButton_CLowR">
+               <property name="styleSheet">
+                <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
+               </property>
                <property name="text">
                 <string>Critically Low Items (10% to target)</string>
                </property>
@@ -170,6 +209,9 @@
              </item>
              <item>
               <widget class="QRadioButton" name="radioButton_ExpR">
+               <property name="styleSheet">
+                <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
+               </property>
                <property name="text">
                 <string>Expirable</string>
                </property>
@@ -190,6 +232,9 @@
              </item>
              <item>
               <widget class="QLabel" name="label_9">
+               <property name="styleSheet">
+                <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
+               </property>
                <property name="text">
                 <string>File Format</string>
                </property>
@@ -219,6 +264,9 @@
                </item>
                <item>
                 <widget class="QComboBox" name="comboBox_fileFormat">
+                 <property name="styleSheet">
+                  <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
+                 </property>
                  <item>
                   <property name="text">
                    <string>txt</string>
@@ -273,7 +321,7 @@
                 <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;The txt format is good for MS Word or a text browser.&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;The XML format  is good for MS Excel or another spreadsheet viewer.&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
@@ -301,6 +349,9 @@ p, li { white-space: pre-wrap; }
                </item>
                <item>
                 <widget class="QPushButton" name="pushButton_makeReport">
+                 <property name="styleSheet">
+                  <string notr="true">font: 10pt &quot;Segoe UI&quot;</string>
+                 </property>
                  <property name="text">
                   <string>Generate</string>
                  </property>
@@ -344,7 +395,7 @@ p, li { white-space: pre-wrap; }
             <x>0</x>
             <y>0</y>
             <width>232</width>
-            <height>474</height>
+            <height>452</height>
            </rect>
           </property>
           <attribute name="label">
@@ -584,7 +635,7 @@ p, li { white-space: pre-wrap; }
                <property name="sizeHint" stdset="0">
                 <size>
                  <width>20</width>
-                 <height>40</height>
+                 <height>30</height>
                 </size>
                </property>
               </spacer>
@@ -619,7 +670,7 @@ p, li { white-space: pre-wrap; }
                 <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600; text-decoration: underline;&quot;&gt;Warning&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Editing item information is permanent and cannot be undone.&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Make sure that all information is correct before submitting it.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -639,7 +690,7 @@ p, li { white-space: pre-wrap; }
             <x>0</x>
             <y>0</y>
             <width>232</width>
-            <height>474</height>
+            <height>452</height>
            </rect>
           </property>
           <attribute name="label">
@@ -864,7 +915,7 @@ p, li { white-space: pre-wrap; }
                 <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600; text-decoration: underline;&quot;&gt;Warning&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Editing item information is permanent and cannot be undone.&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Check the below box to enable inventory adjustment.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
