--- a/src/pages/gearCenter.ui
+++ b/src/pages/gearCenter.ui
@@ -321,6 +321,13 @@
                  <property name="buttonSymbols">
                   <enum>QAbstractSpinBox::NoButtons</enum>
                  </property>
+                 <property name="date">
+                  <date>
+                   <year>1970</year>
+                   <month>1</month>
+                   <day>1</day>
+                  </date>
+                 </property>
                 </widget>
                </item>
                <item row="3" column="0">
@@ -629,7 +636,7 @@
              <item>
               <widget class="QPushButton" name="pushButton_addNote">
                <property name="enabled">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
