almost done with gear
almost done with check in.
done with checkout

still has some bugs

--- a/src/reportsView.ui
+++ b/src/reportsView.ui
@@ -149,7 +149,7 @@
            </rect>
           </property>
           <attribute name="label">
-           <string>Repots</string>
+           <string>Reports</string>
           </attribute>
           <layout class="QVBoxLayout" name="verticalLayout_4">
            <item>
